k8s/traefik/go.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: goshop
  namespace: default
  labels:
    name: goshop

spec:
  replicas: 1
  selector:
    matchLabels:
      app: goshop
  template:
    metadata:
      labels:
        app: goshop
    spec:
      imagePullSecrets:
      - name: ccr
      containers:
      - name: goshop
        image: ccr.ccs.tencentyun.com/joyoo/goshop:v1.1.7
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8080
          initialDelaySecends: 10
          periodSeconds: 5
        readinessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 8080
          initialDelaySecends: 10
          periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: goshop
  namespace: default

spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: goshop
