k8s/traefik/whoami.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: default
  labels:
    name: whoami

spec:
  replicas: 1
  selector:
    matchLabels:
      task: whoami
  template:
    metadata:
      labels:
        task: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySecends: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 80
            initialDelaySecends: 10
            periodSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default

spec:
  ports:
    - name: http
      port: 80
  selector:
    task: whoami

# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: whoamitcp
#   namespace: default
#   labels:
#     app: traefiklabs
#     name: whoamitcp

# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: traefiklabs
#       task: whoamitcp
#   template:
#     metadata:
#       labels:
#         app: traefiklabs
#         task: whoamitcp
#     spec:
#       containers:
#         - name: whoamitcp
#           image: traefik/whoamitcp
#           ports:
#             - containerPort: 8080

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoamitcp
#   namespace: default

# spec:
#   ports:
#     - protocol: TCP
#       port: 8080
#   selector:
#     app: traefiklabs
#     task: whoamitcp

# ---
# kind: Deployment
# apiVersion: apps/v1
# metadata:
#   name: whoamiudp
#   namespace: default
#   labels:
#     app: traefiklabs
#     name: whoamiudp

# spec:
#   replicas: 2
#   selector:
#     matchLabels:
#       app: traefiklabs
#       task: whoamiudp
#   template:
#     metadata:
#       labels:
#         app: traefiklabs
#         task: whoamiudp
#     spec:
#       containers:
#         - name: whoamiudp
#           image: traefik/whoamiudp:latest
#           ports:
#             - containerPort: 8080

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoamiudp
#   namespace: default

# spec:
#   ports:
#     - port: 8080
#   selector:
#     app: traefiklabs
#     task: whoamiudp
