k8s/traefik/whoami (2).yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  namespace: default
  labels:
    name: whoami

spec:
  replicas: 2
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
    spec:
      containers:
        - name: whoami
          image: traefik/whoami
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default

spec:
  ports:
    - name: http
      port: 80
  selector:
    app: whoami

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-cnbattle.com
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s.cnbattle.com`) && PathPrefix(`/whoami`)
      services:
      - name: whoami
        port: 80
